src/test/ui/type/type-ascription-soundness.stderr
error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription-soundness.rs:7:17
   |
LL |     let ref x = arr: &[u8];
   |                 ^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr: &[u8] = &[1u8, 2, 3];
   | ^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription-soundness.rs:9:21
   |
LL |     let ref mut x = arr: &[u8];
   |                     ^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr: &[u8] = &[1u8, 2, 3];
   | ^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription-soundness.rs:11:11
   |
LL |     match arr: &[u8] {
   |           ^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr: &[u8] = &[1u8, 2, 3];
   | ^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type-ascription-soundness.rs:15:16
   |
LL |     let _len = (arr: &[u8]).len();
   |                ^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr: &[u8] = &[1u8, 2, 3];
   | ^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

